--- a/annotation_website/requirements.txt
+++ b/annotation_website/requirements.txt
@@ -27,7 +27,7 @@ mccabe==0.6.1
 mistune==0.8.1
 nbconvert==5.3.1
 nbformat==4.4.0
-notebook==5.2.1
+notebook
 numpy==1.13.3
 pandocfilters==1.4.2
 parso==0.1.0
